# certificate_watcher

./: .gitignore  README.md  badssl.txt  certificate_watcher.py  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/: test_badssl.py  test_parse_spec.py
