[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "certificate_watcher"
description = "Watch expiration of certificates of a bunch of websites."
authors = [{name = "Julien Palard", email = "julien@palard.fr"}]
license = {text = "MIT license"}
keywords = ["ssl", "tls", "certificate", "https", "watch", "sysadmin", "cron", "ocsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">= 3.7"
dependencies = [
    "ocsp-checker",
]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
homepage = "https://github.com/JulienPalard/certificate_watcher"

[project.scripts]
certificate_watcher = "certificate_watcher:main"

[tool.setuptools]
py-modules = ["certificate_watcher"]
include-package-data = false

[tool.setuptools.dynamic.version]
attr = "certificate_watcher.__version__"

[tool.black]