[metadata]
name = certificate_watcher
version = attr: certificate_watcher.__version__
description = Watch expiration of certificates of a bunch of websites.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/certificate_watcher
license = MIT license
keywords = ssl tls certificate https watch sysadmin cron
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = certificate_watcher

[options.entry_points]
console_scripts =
    certificate_watcher=certificate_watcher:main
